app/resources/css/components/vote-card.css
.vote-card > a {
    display: flex;
    align-items: center;
    padding: var(--space-xs) var(--space-sm);

    border: 1px solid var(--gray-lightest);
    border-radius: 4px;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);

    text-decoration: none;

    transition: 0.2s all ease-out;
}

.vote-card > a > * + * {
    margin-left: var(--space-sm);
}

.vote-card__thumb {
    flex-shrink: 0;
}

.vote-card > a:hover {
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 0 2px 10px rgba(0, 0, 0, 0.1);
    border-color: var(--gray-light);
}

